# aria-agent

./: .env.example  .gitignore  CHANGELOG.md  FIXES.md  LICENSE  LIMITATIONS.md  README.md  SECURITY.md  UPGRADES.md  config.py  graph.py  main.py  pyproject.toml  requirements.txt  schemas.py  state.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
examples/: README.md
examples/compare-redis-vs-memcached-for-caching/: reasoning_trace.json  report.md
examples/what-is-retrieval-augmented-generation/: reasoning_trace.json  report.md
memory/: chroma_store.py
nodes/: critic.py  executor.py  memory_reader.py  memory_writer.py  planner.py  replanner.py  report_generator.py  terminator.py
output/: .gitignore  reasoning_trace.json  report.md
report/: __init__.py  pdf_exporter.py
scripts/: run_examples.py
sessions/: __init__.py  manager.py
tests/: __init__.py  test_integration.py  test_memory.py  test_nodes.py  test_pdf_export.py  test_sessions.py  test_sources.py
tools/: search.py
tools/sources/: __init__.py  aggregator.py  arxiv_source.py  base.py  github_source.py  web_source.py  wikipedia_source.py
ui/: __init__.py  app.py
